--- a/index.html
+++ b/index.html
@@ -15,17 +15,31 @@
             <div class="container textCenter">
                 <img src="images/logoFull.png" alt="Brew'd logo" class="logoFull">
                 <div class="buttonRow">
-                    <a href="menu.html" class="buttonLg fontSmB bgBlue">MENU</a>
-                    <a href="order.html" class="buttonLg fontSmB bgBlue">MENU + ORDER</a>
+                    <a href="orderDinner.html" class="buttonLg fontSmB bgBlue">ORDER MEAL</a>
                 </div>
 
-                <a href="#" class="buttonSm fontSmB bgYellow">
+                <div id="callWaiter" >
+                    <button class="buttonSm fontSmB bgYellow">
                     <span class="helpIcon"><i class="fas fa-hand-paper"></i></span>
-                    CALL WAITER
-                </a>
+                    CALL WAITER</button>
+                </div>
 
             </div>
         </div>
+
+        <div id="modalWaiter" class="modal hidden">
+
+            <div class="modalWaiter">
+
+               <div class="modalClose">
+                   <h3 id="modalClose">&#10005;</h3>
+               </div>
+               <div class="textCenter fontMd displayFlex">
+                   <h3 class="borderTop">HELP IS ON<br>THE WAY!</h3>
+               </div>
+
+           </div>
+       </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/f9143b1a53.js" charset="utf-8"></script>
